--- a/tex/10.tex
+++ b/tex/10.tex
@@ -598,7 +598,7 @@ solver = PETScLUSolver()
 
 \paragraph{Solving nonlinear systems.}
 \index{nonlinear system}
-\index{Newton solver}
+\index{Newton's method}
 \index{\emp{NewtonSolver}}
 
 DOLFIN provides a Newton solver in the form of the class
@@ -1871,6 +1871,7 @@ assembled.
 %------------------------------------------------------------------------------
 \subsection{Finite element assembly}
 \index{assembly!implementation}
+\index{\emp{assemble}}
 
 A core functionality of DOLFIN is the assembly of finite element
 variational forms. Given a variational form (\emp{a}), DOLFIN assembles
@@ -1947,9 +1948,8 @@ system of equations.
 
 \paragraph{Natural boundary conditions.}
 \index{boundary condition!natural}
-\index{boundary condition!neumann}
+\index{boundary condition!Neumann}
 \index{boundary integral}
-\index{Neumann boundary condition}
 
 Natural boundary conditions typically appear as boundary terms as the
 result of integrating by parts a partial differential equation multiplied
@@ -2094,7 +2094,6 @@ not present in the VTK output.
 \paragraph{Essential boundary conditions.}
 \index{boundary condition!essential}
 \index{boundary condition!Dirichlet}
-\index{Dirichlet boundary condition}
 \index{\emp{DirichletBC}}
 
 The application of essential boundary conditions is handled by the
@@ -2195,7 +2194,7 @@ previously set values.
 
 %------------------------------------------------------------------------------
 \subsection{Variational problems}
-\index{variational problem!solving}
+\index{variational problem}
 
 Variational problems (finite element discretizations of partial
 differential equations) can be easily solved in DOLFIN using the
@@ -2430,8 +2429,8 @@ call the function \emp{interactive}, or add an optional argument
 
 \index{ParaView}
 \index{MayaVi}
-\index{file format!PVD}
-\index{file format!VTU}
+\index{file formats!PVD}
+\index{file formats!VTU}
 
 The \emp{plot} command provides rudimentary plotting, and advanced
 postprocessing is better handled by external software such as
@@ -2487,7 +2486,7 @@ created for the data on each partition. Results computed in parallel
 can be viewed seamlessly using ParaView.
 
 \paragraph{DOLFIN XML format.}
-\index{file format!DOLFIN XML}
+\index{file formats!DOLFIN XML}
 
 DOLFIN XML is the native format of DOLFIN. An advantage of XML is that
 it is a robust and human-readable format. If the files are compressed,
@@ -3385,7 +3384,6 @@ eventually implements by subclassing \emp{cpp.Expression} in Python.
 
 \paragraph{Just-in-time compilation of expressions.}
 \index{just-in-time compilation}
-\index{JIT compilation}
 
 The performance of a pure Python \emp{Expression} may be suboptimal
 because of the callback from C++ to Python each time the \emp{Expression}
