--- a/tex/11.tex
+++ b/tex/11.tex
@@ -524,7 +524,7 @@ similar (but simpler) set of stages is used.
 %------------------------------------------------------------------------------
 \section{Form representation}
 \label{sec:logg-1:representation}
-\index{form representation}
+\index{form!representation of}
 
 Two different approaches to code generation are implemented in
 FFC. One based on traditional quadrature and another on a special
@@ -650,7 +650,6 @@ optimizations \emp{-f eliminate\_zeros} and
 \section{Just-in-time compilation}
 \label{sec:logg-1:jit}
 \index{just-in-time compilation}
-\index{JIT compilation}
 
 \ffc{} can also be used as a just-in-time (JIT) compiler. In a scripted
 environment, \ufl{} objects can be passed to \ffc{}, and \ffc{} will
