--- a/tex/12.tex
+++ b/tex/12.tex
@@ -31,7 +31,7 @@ quite respectable.
 %------------------------------------------------------------------------------
 \section{Optimized form compilation}
 \index{optimization}
-\index{tensor representation!optimization}
+\index{tensor representation!optimization of}
 
 FFC supports two different modes of code generation depending on how
 the multilinear form is represented. A user may select the tensor
