--- a/tex/14.tex
+++ b/tex/14.tex
@@ -27,7 +27,7 @@ whether the C/C++ code has changed since the last execution, Instant
 computes the SHA1 sum~\citep{HansenWollman} of the code and compares
 it to the SHA1 checksum of the code used in the previous
 execution. Finally, Instant has implemented a set of
-SWIG \index{typemaps}typemaps, allowing the user to transfer NumPy
+SWIG \index{typemap}typemaps, allowing the user to transfer NumPy
 arrays between the Python code and the C/C++ code.
 
 \section{Examples}
@@ -567,7 +567,7 @@ void sum (int m, int* mp, double* ar1, int n,
 
 \subsection{Module name, signature, and cache}\label{wilbers:sec:msc}
 
-\index{cache}\index{signatures}
+\index{cache}\index{signature}
 The Instant cache resides in the directory \emp{.instant} in the
 home directory of the user. It is possible to specify a different directory, but the
 \emp{instant-clean} script will not remove these when executed.
