--- a/tex/17.tex
+++ b/tex/17.tex
@@ -45,11 +45,11 @@
 %\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
 
 \index{Unified Form Language}
-\index{\ufl{}}
+\index{UFL}
 \index{variational form}
 \index{weak form}
 \index{functional}
-\index{form language}
+\index{form!language}
 \index{domain specific language}
 
 The Unified Form Language -- \ufl{} \citep{AlnaesLogg2009} --
@@ -303,9 +303,7 @@ Mooney-Rivlin material law.}
 %==============================================================================
 \section{Defining finite element spaces} \label{ufl:sec:elements}
 \index{finite element}
-\index{finite element space}
-\index{Lagrange element}
-\index{discontinuous Lagrange element}
+\index{finite element!Discontinuous Lagrange}
 \index{\emp{FiniteElement}}
 \index{\emp{VectorElement}}
 \index{\emp{TensorElement}}
@@ -379,7 +377,7 @@ result in a mixed element with three direct subelements, but rather
 \index{\emp{Form}}
 \index{\emp{Integral}}
 \index{\emp{Measure}}
-\index{forms}
+\index{form}
 \index{integrals}
 \index{interior measure}
 \index{cell integral}
@@ -485,7 +483,7 @@ the manuals of \ufl{} and the form compilers.
 \index{identity matrix}
 \index{spatial coordinates}
 \index{facet normal}
-\index{form argument}
+\index{form!argument of}
 \index{basis function}
 \index{coefficient function}
 
@@ -510,13 +508,12 @@ as \emp{cell.d}.
 
 %------------------------------------------------------------------------------
 \subsection{Form arguments} \label{ufl:sec:arguments}
-\index{form arguments}
-\index{functions}
-\index{basis functions}
-\index{coefficient functions}
-\index{coefficients}
+\index{form!argument of}
+\index{function}
+\index{basis function}
+\index{coefficient function}
+\index{coefficient}
 \index{\emp{Argument}}
-\index{\emp{Arguments}}
 \index{\emp{TestFunction}}
 \index{\emp{TestFunctions}}
 \index{\emp{TrialFunction}}
@@ -585,7 +582,7 @@ f0, f1 = Coefficients(V)
 %------------------------------------------------------------------------------
 \subsection{Index notation}
 \label{ufl:sec:indexnotation}
-\index{indices}
+\index{index}
 \index{index notation}
 \index{implicit summation}
 \index{\emp{Index}}
@@ -732,9 +729,9 @@ classes are found in Section~\ref{ufl:sec:representation}.
 \index{determinant}
 \index{transpose}
 \index{inverse}
-\index{language operators}
-\index{algebraic operators}
-\index{tensor algebra operators}
+\index{language operator}
+\index{algebraic operator}
+\index{tensor algebra operator}
 \index{\emp{dot}}
 \index{\emp{inner}}
 \index{\emp{outer}}
@@ -936,7 +933,7 @@ explains how derivatives are computed.
 %------------------------------------------------------------------------------
 \subsection{Other operators}
 \label{ufl:sec:conditionals}
-\index{DG operators}
+\index{DG operator}
 \index{discontinuous Galerkin}
 \index{jump}
 \index{\emp{jump}}
@@ -996,7 +993,7 @@ The condition can be one of
 %==============================================================================
 \section{Form operators}
 \label{ufl:sec:formtransformations}
-\index{form operators}
+\index{form!operator}
 \index{\emp{action}}
 \index{\emp{energy\_norm}}
 \index{\emp{lhs}}
@@ -1645,13 +1642,11 @@ V[8] = v_{-2} * v_{-1} * c_0 * w_1 ** 2
 %==============================================================================
 \section{Computing derivatives} \label{ufl:sec:ad}
 \index{computing derivatives}
-\index{Automatic Differentiation}
-\index{AD}
-\index{forward mode AD}
-\index{reverse mode AD}
+\index{automatic differentiation}
+\index{automatic differentiation!forward mode}
+\index{automatic differentiation!reverse mode}
 \index{symbolic differentiation}
 \index{differentiation}
-\index{derivatives}
 
 When any kind of derivative expression is declared by the end-user of
 the form language, an expression object is constructed to represent
@@ -1971,7 +1966,7 @@ already been used in the form.
 %==============================================================================
 \section{Algorithms}
 \label{ufl:sec:algorithms}
-\index{algorithms}
+\index{form!algorithms}
 
 In this section, some central algorithms and key implementation issues
 are discussed, much of which relates to the Python programming language.
@@ -1983,7 +1978,7 @@ some of the techniques here interesting.
 \subsection{Effective tree traversal in Python}
 \label{ufl:sec:traversal}
 
-\index{expression trees}
+\index{expression tree}
 \index{tree traversal}
 
 Applying some action to all nodes in a tree is naturally expressed
@@ -2021,7 +2016,7 @@ magnitude faster than the above.
 %------------------------------------------------------------
 \subsection{Type based function dispatch in Python}
 \label{ufl:sec:multifunction}
-\index{multifunctions}
+\index{multifunction}
 
 A common task in both symbolic computing and compiler implementation
 is the selection of some operation based on the type of an expression
@@ -2099,7 +2094,7 @@ they have no specific handlers.
 %------------------------------------------------------------
 \subsection{Implementing expression transformations}
 \label{ufl:sec:transformer}
-\index{expression transformations}
+\index{expression transformation}
 
 Many transformations of expressions can be implemented recursively with
 some type-specific operation applied to each expression node.  Examples of
@@ -2156,8 +2151,8 @@ this pattern.
 
 %------------------------------------------------------------
 \subsection{Important transformations} \label{ufl:sec:expanding}
-\index{expression transformations}
-\index{expression representations}
+\index{expression transformation}
+\index{expression representation}
 
 There are many ways in which expression representations can
 be manipulated.  Here, we describe three particularly important
@@ -2471,7 +2466,7 @@ somewhat non-intuitive design of the comparison operators in \ufl{}.
 
 \subsection{Ensuring unique form signatures}
 \label{ufl:sec:signatures}
-\index{signatures}
+\index{signature}
 
 The form compilers need to compute a unique signature of each form for use
 in a cache system to avoid recompilations.  A convenient way to define
