--- a/tex/20.tex
+++ b/tex/20.tex
@@ -95,7 +95,7 @@ modern perspective and work with velocity and pressure spaces that are known to
 satisfy the LBB condition.
 
 An approach to circumventing the difficulties associated with the
-saddle-point nature of the Stokes problem is to modify the discrete
+saddle point nature of the Stokes problem is to modify the discrete
 variational problem by augmenting the continuity equation with a
 term that involves the pressure. With appropriate modification of the
 discrete problem, stability can be proved for equal-order formulations
