--- a/tex/21.tex
+++ b/tex/21.tex
@@ -54,7 +54,7 @@ Chorin's projection scheme by \citet{Chorin1968} and
 \citet{Temam1969}, the incremental pressure correction scheme (IPCS)
 by \citet{Goda1979}, the consistent splitting scheme (CSS) by
 \citet{GuermondMinevShen2006}, a least-squares stabilized Galerkin
-scheme (G2) by \citet{HoffmanJohnson2007}, and a saddle-point solver
+scheme (G2) by \citet{HoffmanJohnson2007}, and a saddle point solver
 based on a Richardson iteration on the pressure Schur complement
 (GRPC) as described in \citet{Turek1996}.
 
@@ -655,14 +655,14 @@ Lw = inner(u1, z)*dx
 \label{fig:g2_code}
 \end{figure}
 
-\subsection{A saddle-point solver for a pure Galerkin discretization (GRPC)}
-\index{saddle-point problem}
+\subsection{A saddle point solver for a pure Galerkin discretization (GRPC)}
+\index{saddle point problem}
 \index{GRPC}
 
 Finally, we test a scheme based on a pure space-time Galerkin finite
 element discretization of the incompressible Navier--Stokes equations
-and iterative solution of the resulting saddle-point system. The
-saddle-point system is obtained by testing the momentum
+and iterative solution of the resulting saddle point system. The
+saddle point system is obtained by testing the momentum
 equation~\eqref{eq:ns,mom} against a test function $v \in V_h$ and the
 continuity equation~\eqref{eq:ns,con} against a test function $q \in
 Q_h$ and integrating over $\Omega \times [t_{n-1}, t_n]$. This
@@ -1332,6 +1332,6 @@ implement and does not require the iterative solution of a nonlinear
 system in each time step. The GRPC method (straightforward standard
 finite element Galerkin discretization) also obtains high accuracy,
 but does not deliver the same speed. It is possible that better tuning
-of the iterative solution of the saddle-point system would change this
+of the iterative solution of the saddle point system would change this
 picture. The same can be said for the G2 method, the speed of which
 will likely increase by adopting a more efficient iterative algorithm.
