--- a/tex/25.tex
+++ b/tex/25.tex
@@ -6,7 +6,7 @@
 
 The main motivation of this work is the implementation of a general
 finite element solver for some of the improved Boussinesq
-models\index{Boussinesq models}. Here, we use an extension of the
+models\index{Boussinesq model}. Here, we use an extension of the
 model proposed by~\citet{ZhaoTengCheng2004} to investigate the
 behavior of surface water waves. The equations in this model do not
 contain spatial derivatives with an order higher than two. Some
@@ -768,7 +768,7 @@ elevation and the transformed velocity potential, whereas
 $\vartheta_1$ and $\vartheta_2$ are the test functions defined in
 appropriate spaces.
 
-We use a predictor-corrector \index{Predictor--Corrector} scheme with
+We use a predictor-corrector \index{predictor--corrector scheme} scheme with
 an initialization provided by an explicit
 Runge--Kutta\index{Runge--Kutta} method for the time integration. In
 the DOLFWAVE code these routines are implemented in the PredCorr and
@@ -941,7 +941,7 @@ For time dependent wave generation, it is possible to consider waves
 induced by a boundary condition.  This requires that the wave surface
 elevation and the velocity potential must satisfy appropriate boundary
 conditions, e.g., Dirichlet or Neumann conditions.\index{boundary
-conditions}
+condition}
 
 The simplest case is to consider a periodic wave given by:
 %%
