--- a/tex/34.tex
+++ b/tex/34.tex
@@ -397,7 +397,7 @@ are defined by
 
 A common challenge in electromagnetic eigenvalue problems such as these is
 the occurrence of spurious modes which are discussed in~\citet{Jin2002}
-and~\citet{Davidson2011}\index{spurious modes}. These are non-physical
+and~\citet{Davidson2011}\index{spurious mode}. These are non-physical
 modes that fall in the null space of the $\nabla\times{\nabla\times}$
 operator of \eqref{eq:lezar:vector_helmholtz}~\citep{Bossavit1998},
 with the issue of spurious modes revisited in the work
