--- a/tex/36.tex
+++ b/tex/36.tex
@@ -447,7 +447,7 @@ filtration of the spurious modes.
   $\{ \tilde \beta_h \}_h$ are bounded from below by a positive
   constant independent of $h$.
 \end{definition}
-\index{Reduced discrete stability}
+\index{reduced discrete stability}
 
 \section{Eigenvalue problems associated with saddle point stability}
 
@@ -827,8 +827,7 @@ classical analytical results reproduced. The complete code is
 available from the demo directory of the \rognesascot{} module.
 
 \subsection{Mixed Laplacian}
-
-\index{Poisson equation!mixed finite element discretization}
+\index{Poisson's equation!mixed finite element discretization}
 
 We can now return to the mixed Laplacian example described in
 Section~\ref{rognes:sec:motivation} and inspect the Brezzi stability
