--- a/tex/7.tex
+++ b/tex/7.tex
@@ -197,7 +197,7 @@ virtual void tabulate_tensor(double* A,
 
 \section{Quadrature optimizations}
 \label{oelgaard-2:sec:quadrature_optimizations}
-\index{quadrature optimizations}
+\index{quadrature representation!optimization of}
 
 We now address optimizations for improving the run-time performance of
 the generated code.  The underlying philosophy of the optimization
