--- a/tex/1.tex
+++ b/tex/1.tex
@@ -397,7 +397,7 @@ applies other components in the
 \fenics{} suite under the hood, but newcomers to \fenics{} programming
 do not need to care about this.
 
-The statement\index{Mesh}\index{DOLFIN mesh}
+The statement\index{\emp{Mesh}}\index{mesh}
 \begin{python}
 mesh = UnitSquare(6, 4)
 \end{python}
@@ -706,7 +706,7 @@ of iterations when running an iterative method.
 Such parameters can be set by accessing
 the \emph{global parameter database}, which is called
 \emp{parameters} and behaves as a nested dictionary. Write
-\index{info function (\dolfin)}
+\index{\emp{info}}
 \begin{python}
 info(parameters, True)
 \end{python}
@@ -2581,7 +2581,7 @@ this modification.
 
 \section{Nonlinear problems}
 \label{langtangen:poisson:nonlinear}
-\label{nonlinear PDEs}
+\index{partial differential equation!nonlinear}
 
 Now we shall address how to solve nonlinear PDEs in \fenics. Our
 sample PDE for implementation is taken as a nonlinear Poisson
@@ -3178,8 +3178,9 @@ of forms. This feature facilitates automatic \emph{symbolic} computation of the
 Jacobian \emp{J} by calling the function \emp{derivative} with \emp{F}, the most
 recently computed solution (\emp{Function}), and the unknown
 (\emp{TrialFunction}) as parameters:
-\index{derivative}\index{automatic differentiation}
-\index{Jacobian, automatic computation}
+\index{derivative}
+\index{automatic differentiation}
+\index{Jacobian}
 \begin{python}
 du = TrialFunction(V)
 v  = TestFunction(V)
@@ -3277,7 +3278,7 @@ shall explain how easily this is accomplished through examples.
 
 \subsection{A diffusion problem and its discretization}
 \label{langtangen:timedep:diffusion1}
-\index{time-dependent PDEs}
+\index{partial differential equation!time-dependent}
 
 Our time-dependent
 model problem for teaching purposes is naturally the simplest
@@ -4638,7 +4639,7 @@ Below we explain some key terms used in this tutorial.
   notation: \emp{instance\_name.method\_name}.
 
   \item[\emp{self} parameter (Python):] required first parameter in class
-  methods, representing a particular object of the class.\index{self} Used
+  methods, representing a particular object of the class.\index{\emp{self}} Used
   in method definitions, but never in calls to a method.  For example,
   if \emp{method(self, x)} is the definition of \emp{method} in a class
   \emp{Y}, \emp{method} is called as \emp{y.method(x)}, where \emp{y}
