--- a/tex/10.tex
+++ b/tex/10.tex
@@ -814,7 +814,7 @@ Meshes must be stored in the DOLFIN XML format. The following example
 illustrates the XML format for a $2 \times 2$ mesh of the unit square:
 
 \index{mesh!XML format}
-\index{XML format}
+\index{file formats!DOLFIN XML}
 
 \begin{xml}
 <?xml version="1.0" encoding="UTF-8"?>
