--- a/tex/2.tex
+++ b/tex/2.tex
@@ -112,7 +112,7 @@ prescribed values for the temperature and heat flux, respectively.
 
 %------------------------------------------------------------------------------
 \section{Finite element discretization}
-\index{finite element discretization}
+\index{discretization}
 
 \subsection{Discretizing Poisson's equation}
 
@@ -171,9 +171,6 @@ $\{\phi_j\}_{j=1}^N$ for $V_h$ and a basis $\{\hat{\phi}_i\}_{i=1}^N$
 for $\hat{V}_h$. Here, $N$ denotes the dimension of the spaces~$V_h$ and $\hat{V}_h$.
 We may then make an Ansatz for $u_h$ in terms of the basis functions
 of the trial space,
-%
-\index{finite element solution}
-\index{finite element space}
 %
 \begin{equation}
   u_h(x) = \sum_{j=1}^N U_j \phi_j(x),
@@ -340,7 +337,7 @@ then be computed by solving a linear system $AU = b$, where
 
 \subsection{Nonlinear problems}
 \label{sec:abstract,nonlinear}
-\index{nonlinear problems}
+\index{nonlinear problem}
 
 We also consider nonlinear variational problems written in the
 following canonical form: find $u \in V$ such that
@@ -442,7 +439,7 @@ We may thus compute the entries of the Jacobian matrix~$A(u_h)$ by
 
 %------------------------------------------------------------------------------
 \section{Finite element function spaces}
-\index{finite element function spaces}
+\index{function space}
 
 In the above discussion, we assumed that we could construct discrete
 subspaces $V_h \subset V$ of infinite-dimensional function spaces. A
@@ -957,7 +954,7 @@ of computable quantities like the residual and (possibly) the solution
 of an auxiliary dual problem, as described below.
 
 \subsection{\emph{A priori} error analysis}
-\index{a priori error estimate}
+\index{error estimate!a priori}
 
 We consider the linear variational problem~(\ref{eq:varproblem}). We
 first assume that the bilinear form~$a$ and the linear form~$L$ are
@@ -1048,7 +1045,7 @@ $\|\cdot\|_V$. For the solution of Poisson's equation in $V = H^1_0$,
 we have $C = \alpha = 1$ and $p = q = 1$.
 
 \subsection{\emph{A posteriori} error analysis}
-\index{a posteriori error estimate}
+\index{error estimate!a posteriori}
 
 \paragraph{Energy norm error estimates.}
 
