--- a/tex/25.tex
+++ b/tex/25.tex
@@ -1010,8 +1010,7 @@ given, we must close the system with appropriate boundary conditions.
 We consider two more types of boundaries:
 %%
 \begin{enumerate}
-\item full reflective boundaries;\index{reflective
-    boundaries}
+\item full reflective boundaries;\index{reflective boundary}
 \item sponge layers.
 \end{enumerate}
 %%
@@ -1027,7 +1026,7 @@ where $n$ is the outward unit vector normal to the boundary
 $\Gamma$ of the domain $\Omega$.
 
 Regarding the second case, we consider equations~\eqref{eq:lopes:fullrefl}
-and an extra artificial term, often called sponge \index{sponge-layers}
+and an extra artificial term, often called sponge \index{sponge-layer}
 or damping layer, given by $\nu\nabla^2\Phi$ (see equation
 ~\eqref{eq:lopes:ztc-b}), acting in a neighborhood of the boundary
 $\Gamma$.  In this way, the reflected energy can be controlled. Moreover,
