--- a/tex/36.tex
+++ b/tex/36.tex
@@ -15,7 +15,7 @@
 \newcommand{\rognesascot}{ASCoT}
 \newcommand{\rognespython}{Python}
 
-\index{mixed finite element methods}
+\index{mixed finite element method}
 \index{discrete stability}
 
 Over the last five decades, there has been a substantial body of
@@ -305,8 +305,7 @@ zero as $h \rightarrow 0$. This is precisely what is implied by the
 condition~\eqref{rognes:eq:infsup:discrete}.
 
 \subsection{Stability conditions for saddle point problems}
-
-\index{saddle point problems}
+\index{saddle point problem}
 
 We now turn to consider the special case of abstract saddle point
 problems. In this case, the stability
