--- a/tex/33.tex
+++ b/tex/33.tex
@@ -137,7 +137,7 @@ $\Omega$; see Figure~\ref{fig:hake:morphology} (B).
 
 \paragraph{Electro-diffusion.}
 \index{Fick's second law} \index{screening} \index{electro-diffusion}
-\index{advection--diffusion} \index{Gouy-Chapman} \index{Nernst-Planck
+\index{advection--diffusion equation} \index{Gouy-Chapman} \index{Nernst-Planck
   equation}
 
 We will use Fick's second law to model diffusion of \Ca in the dyadic
@@ -276,7 +276,7 @@ distance to the center of the cytosol. In our model, we have used \Ds
 
 \subsection{Stochastic models of single channels}
 \label{sec:hake:stochastic-models}
-\index{stochastic channel} \index{Markov chain model} \index{Discrete
+\index{stochastic channel} \index{Markov chain model} \index{discrete
   state} \index{propensity function}
 
 Discrete and stochastic Markov chain models are used to describe
