--- a/tex/FM1.tex
+++ b/tex/FM1.tex
@@ -132,26 +132,36 @@ Anders Logg, Kent-Andre Mardal and Garth N. Wells \\*
 \emph{Oslo and Cambridge, October 2011}
 
 % Cross references
-\index{Dirichlet boundary condition|see{boundary condition!Dirichlet}}
-\index{Neumann boundary condition|see{boundary condition!Neumann}}
-\index{Robin boundary condition|see{boundary condition!Robin}}
-\index{Lagrange finite element|see{finite element!Lagrange}}
-\index{CG element|see{finite element!CG}}
-\index{discontinuous Lagrange element|see{finite element!Discontinuous Lagrange}}
-\index{DG element|see{finite element!Discontinuous Lagrange}}
-\index{Crouzeix--Raviart element|see{finite element!Crouzeix--Raviart}}
-\index{Raviart--Thomas element|see{finite element!Raviart--Thomas}}
-\index{Brezzi--Douglas--Marini element|see{finite element!Brezzi--Douglas--Marini}}
-\index{Mardal--Tai--Winther element|see{finite element!Mardal--Tai--Winther}}
-\index{Arnold--Winther element|see{finite element!Arnold--Winther}}
-\index{N\'ed\'elec element|see{finite element!N\'ed\'elec}}
-\index{Argyris element|see{finite element!Argyris}}
-\index{Hermite element|see{finite element!Hermite}}
-\index{Morley element|see{finite element!Morley}}
-\index{Bubble element|see{finite element!Bubble element}}
+\index{Dirichlet boundary condition|see{boundary condition}}
+\index{Neumann boundary condition|see{boundary condition}}
+\index{Robin boundary condition|see{boundary condition}}
+\index{Lagrange finite element|see{finite element}}
+\index{CG element|see{finite element}}
+\index{discontinuous Lagrange element|see{finite element}}
+\index{DG element|see{finite element}}
+\index{Crouzeix--Raviart element|see{finite element}}
+\index{Raviart--Thomas element|see{finite element}}
+\index{Brezzi--Douglas--Marini element|see{finite element}}
+\index{Mardal--Tai--Winther element|see{finite element}}
+\index{Arnold--Winther element|see{finite element}}
+\index{N\'ed\'elec element|see{finite element}}
+\index{Argyris element|see{finite element}}
+\index{Hermite element|see{finite element}}
+\index{Morley element|see{finite element}}
+\index{Bubble element|see{finite element}}
 \index{finite element assembly|see{assembly}}
-\index{goal oriented error estimate|see{error estimate!goal oriented}}
+\index{goal oriented error estimate|see{error estimate}}
+\index{a priori error estimate|see{error estimate}}
+\index{a posteriori error estimate|see{error estimate}}
 \index{JIT|see{just-in-time compilation}}
 \index{AD|see{automatic differentiation}}
-\index{forward mode AD|see{automatic differentiation!forward mode}}
-\index{reverse mode AD|see{automatic differentiation!reverse mode}}
+\index{forward mode AD|see{automatic differentiation}}
+\index{reverse mode AD|see{automatic differentiation}}
+\index{XFEM|see{extended finite element method}}
+\index{SUPG|see{stabilization}}
+\index{PDE|see{partial differential equation}}
+\index{nonlinear PDE|see{partial differential equation}}
+\index{time-dependent PDE|see{partial differential equation}}
+\index{XML format|see{file formats}}
+\index{IPCS|see{incremental pressure correction}}
+\index{Ciarlet finite element definition|see{finite element}}
